fix alignment issues in the product lines

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -158,7 +158,7 @@ figure img {
 .featured-brands {
   display: flex;
   flex-flow: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   margin-bottom: 0px;
 }
 
@@ -168,7 +168,7 @@ figure img {
 .flex-center {
   display: flex;
   flex-flow: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   margin-bottom: 0px;
 }
 
@@ -182,7 +182,7 @@ figure img {
   margin: 0 auto;
   display: flex;
   flex-flow: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   background-color: rgba(255, 255, 255, .75);
 }
 
@@ -197,7 +197,7 @@ figure img {
   margin: 24px;
   display: flex;
   flex-flow: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   background-image: url(../images/bg-steel-bottom.png);
   border: solid 1px white;
   border-left: none;
@@ -245,7 +245,7 @@ figure img {
 
   .header-nav .main-menu {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
   }
 
   #toggle-menu, 
